--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel = "stylesheet" type="text/css" href="./game.css">
 </head>
 <body>
-</body>
+    <canvas id="gameCanvas"></canvas>
 
+</body>
+<script src="./game.js"></script>
 </html>
